[package]
name = "daa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bruteforce"
path = "src/bruteforce.rs"

[[bin]]
name = "tsp"
path = "src/tsp.rs"

[[bin]]
name = "smmultiplication"
path = "src/Strassen’sMatrixMultiplication.rs"

[[bin]]
name = "FractionalKnapsack"
path = "src/FractionalKnapsack.rs"

[[bin]]
name = "JobSequencingWithDeadline"
path = "src/JobSequencingWithDeadline.rs"

[dependencies]
